Updaterrr main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,10 @@
-name: Deploy Static Website to S3
+name: Hello World Workflow
 
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:  # Allows manual triggering
+on: [push]
 
 jobs:
-  deploy:
-    runs-on: Self-hosted
-
+  build:
+    runs-on: self-hosted
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    # Configure AWS credentials
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: "ap-south-1"
-
-    # Deploy to S3 bucket - directly sync the repository contents
-    - name: Deploy to S3
-      run: |
-        aws s3 sync ./ s3://${{ secrets.S3_BUCKET_NAME }}/ \
-          --delete \
-          --exclude ".git/*" \
-          --exclude ".github/*" \
-          --exclude "README.md" 
+      - name: Say hello
+        run: echo "Hello, world!"
